@@ -16,7 +16,7 @@ kde4_add_plugin(plasmate_text_editor ${text_editor_SRCS})
 target_link_libraries(plasmate_text_editor ${KDE4_PLASMA_LIBS} ${KDE4_KIO_LIBS})
 
 set( testtext_SRCS tests/test_text.cpp
-                       texteditor.cpp
+#                        texteditor.cpp
       )
 
 # kde4_add_ui_files (textdata_SRCS
